# pyskills

./: CHANGELOG.md  README.md  core.html  core.html.md  edit.html  edit.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
nbs/: 00_core.ipynb  01_edit.ipynb  index.ipynb  nbdev.yml
pyskills/: _modidx.py  core.py  createskill.py  edit.py  skill.py
