[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyskills"
dynamic = ["version"]
description = "Python-native skills system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/pyskills"
Documentation = "https://AnswerDotAI.github.io/pyskills/"

[project.entry-points.pyskills]
"pyskills.skill" = "pyskills.skill"

[project.entry-points.nbdev]
pyskills = "pyskills._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "pyskills.__version__"}

[tool.setuptools.packages.find]
include = ["pyskills"]

[tool.nbdev]
